--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapper">
     <div class="maincontent">
-      <section class="hero">
+      <section data-sidemenu-theme="white" data-section-id ="hero" class="hero">
         <div class="container hero__container">
           <header class="header">
             <div class="logo">
@@ -20,13 +20,13 @@
             </div>
             <nav class="menu">
               <ul class="menu__list">
-                <li class="menu__item"> <a href="#" class="menu__link">О нас </a> </li>
-                <li class="menu__item"> <a href="#" class="menu__link">Серфборды</a> </li>
-                <li class="menu__item"> <a href="#" class="menu__link">Команда</a> </li>
-                <li class="menu__item"> <a href="#" class="menu__link">Меню</a> </li>
-                <li class="menu__item"> <a href="#" class="menu__link">Отзывы</a> </li>
-                <li class="menu__item"> <a href="#" class="menu__link">Как мы работаем</a> </li>
-                <li class="menu__item"> <a href="#" class="menu__link">Контакты</a> </li>
+                <li class="menu__item"> <a href="#" data-scroll-to="benefits" class="menu__link">О нас </a> </li>
+                <li class="menu__item"> <a href="#" data-scroll-to="products" class="menu__link">Серфборды</a> </li>
+                <li class="menu__item"> <a href="#" data-scroll-to="team"class="menu__link">Команда</a> </li>
+                <li class="menu__item"> <a href="#" data-scroll-to="products-menu" class="menu__link">Меню</a> </li>
+                <li class="menu__item"> <a href="#" data-scroll-to="reviews" class="menu__link">Отзывы</a> </li>
+                <li class="menu__item"> <a href="#" data-scroll-to="video" class="menu__link">Как мы работаем</a> </li>
+                <li class="menu__item"> <a href="#" data-scroll-to="map" class="menu__link">Контакты</a> </li>
               </ul>
             </nav>
             <a href="tel:+78009039090" class="phone-number header__phone-number">
@@ -46,7 +46,7 @@
           <div class="hero__title-section">
             <h1 class="hero__main-title">Профессиональные доски для серфинга</h1>
             <div class="hero__title-desc">Самый большой выбор серфбордов в мире</div>
-            <a href="#" class="btn btn--theme--yellow">Заказать</a>
+            <a href="#" data-scroll-to="order" class="btn btn--theme--yellow">Заказать</a>
           </div>
           <div class="hero__icons-section">
             <ul class="features">
@@ -78,7 +78,7 @@
           </div>
         </div>
       </section>
-      <section class="section benefits-section">
+      <section data-sidemenu-theme="black" data-section-id ="benefits" class="section benefits-section">
         <div class="container">
           <div class="headline">
             <h2 class="section__title headline__title">Почему Surfboard?</h2>
@@ -140,7 +140,7 @@
           </ul>
         </div>
       </section>
-      <section class="section products-section">
+      <section data-sidemenu-theme="black" data-section-id ="products" class="section products-section">
         <div class="container slider-container">
           <div class="products-slider">
             <div class="product-slider__arrows">
@@ -308,7 +308,7 @@
           </div>
         </div>
       </section>
-      <section class="section team-section">
+      <section data-sidemenu-theme="black" data-section-id ="team" class="section team-section">
         <div class="container">
           <h2 class="section__title section__title--team">Команда</h2>
           <ul class="team team--version--desktop">
@@ -414,7 +414,7 @@
           </ul>
         </div>
       </section>
-      <section class="section products-menu-section">
+      <section data-sidemenu-theme="white" data-section-id ="products-menu" class="section products-menu-section">
         <h2 class="section__title products-menu-section__title">Меню</h2>
         <ul class="products-menu">
           <li class="products-menu__item">
@@ -461,7 +461,7 @@
           </li>
         </ul>
       </section>
-      <section class="section reviews-section">
+      <section data-sidemenu-theme="black" data-section-id ="reviews" class="section reviews-section">
         <div class="container">
           <h2 class="section__title section__review-title">Отзывы</h2>
           <div class="reviews">
@@ -538,7 +538,7 @@
           </div>
         </div>
       </section>
-      <section class="section video-section">
+      <section data-sidemenu-theme="black" data-section-id ="video" class="section video-section">
         <div class="container video__container">
           <h2 class="section__title video__title">Как мы работаем</h2>
           <div class="video__wrapper">
@@ -571,7 +571,7 @@
           </div>
         </div>
       </section>
-      <section class="section order-section">
+      <section data-sidemenu-theme="white" data-section-id ="order" class="section order-section">
         <div class="container">
           <h2 class="section__title order-section__title">Закажите доску</h2>
           <form class="form">
@@ -646,7 +646,7 @@
           </form>
         </div>
       </section>
-      <section class="section map-section">
+      <section data-sidemenu-theme="black" data-section-id ="map" class="section map-section">
         <div class="map" id="map"></div>
         <footer class="footer">  
           <div class="container footer__container">
@@ -724,20 +724,21 @@
   </div>
   <nav class="fixed-menu">
     <ul class="fixed-menu__list">
-      <li class="fixed-menu__item fixed-menu__item--active"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
-      <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item fixed-menu__item--active"> <a href="#" data-scroll-to="hero" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item "> <a href="#" data-scroll-to="benefits" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item"> <a href="#" data-scroll-to="products" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item"> <a href="#" data-scroll-to="team" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item"> <a href="#" data-scroll-to="products-menu" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item"> <a href="#" data-scroll-to="reviews" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item"> <a href="#" data-scroll-to="video" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item"> <a href="#" data-scroll-to="order" class="fixed-menu__link"> </a></li>
+      <li class="fixed-menu__item"> <a href="#" data-scroll-to="map" class="fixed-menu__link"> </a></li>
     </ul>
   </nav>
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
   <script src="./js/map.js"></script>
   <script src="./js/modal.js"></script>
@@ -747,6 +748,7 @@
   <script src="./js/vertical-acco.js"></script>
   <script src="./js/inline-acco.js"></script>
   <script src="./js/video.js"></script>
-  <!-- <script src="./js/ops.js"></script> -->
+  <script src="./js/jquery.touchSwipe.min.js"></script>
+  <script src="./js/ops.js"></script>
 </body>
 </html>
