--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Surfboard</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
-  <!-- <link rel="stylesheet" href="./css/main.css"> -->
   <link rel="stylesheet" href="./css/main.min.css">
+  <!-- <link rel="stylesheet" href="./css/main.css"> -->
 </head>
 <body>
   <div class="wrapper">
@@ -738,10 +736,9 @@
   </nav>
   <script src="./scripts/main.min.js"></script>
   <!-- <script src="./scripts/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  <script src="./scripts/jquery.fancybox.js"></script>
+  <script src="./scripts/jquery.bxslider.js"></script>
+  <script src="./scripts/mobile-detect.js"></script>
   <script src="./scripts/map.js"></script>
   <script src="./scripts/modal.js"></script>
   <script src="./scripts/slider.js"></script>
@@ -751,6 +748,7 @@
   <script src="./scripts/inline-acco.js"></script>
   <script src="./scripts/video.js"></script>
   <script src="./scripts/jquery.touchSwipe.min.js"></script>
-  <script src="./scripts/ops.js"></script> -->
+  <script src="./scripts/ops.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script> -->
 </body>
 </html>
